Spacing corrections

--- a/src/styles/views/Home.scss
+++ b/src/styles/views/Home.scss
@@ -6,9 +6,9 @@
         justify-content: center;
 
         .logo {
-            height: 120px;
+            height: 80px;
             width: 250px;
-            padding: 20px 0;
+            padding: 5px 0;
         }
     }
 
@@ -20,8 +20,9 @@
 
         h1{
             color:#FFFFFF;
-            font-size: 80px;
+            font-size: 60px;
             text-align: center;
+            padding-top: 20px;
         }
         .header-words{
             color:#FFFFFF;
@@ -46,6 +47,7 @@
                     font-size: 20px;
                     color: #151517;
                     text-align: center;
+                    margin: 5px 0;
                 }
             }
         }
@@ -62,6 +64,7 @@
             font-size: 20px;
             margin: 20px 0px;
             border-radius: 30px;
+            padding: 0;
         }
     }
 }
